--- a/shared-styles/footer.css
+++ b/shared-styles/footer.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: hidden;
 }
 
 .footer-top {
@@ -116,7 +117,7 @@
 }
 
 /* Laptop Media Query */
-@media (max-width: 1024px) {
+@media (max-width: 1280px) {
   .footer-logo img {
     width: 320px;
   }
@@ -203,7 +204,7 @@
   }
 
   .footer-nav a {
-    font-size: 20px;
+    font-size: 22px;
     text-align: center;
   }
 
@@ -230,17 +231,17 @@
   }
 
   .footer-tagline p {
-    font-size: 14px;
+    font-size: 12px;
     text-align: center;
   }
 
   .footer-tagline img {
-    width: 40px;
+    width: 25px;
     height: auto;
   }
 
   .footer-copyright p {
-    font-size: 10px;
+    font-size: 8px;
     text-align: center;
   }
 
