--- a/home.css
+++ b/home.css
@@ -1,7 +1,7 @@
 /* Hero Section */
 .hero {
   background-color: #000000;
-  width: 100%;
+  width: 100vw;
   height: 80vh;
   position: relative;
   overflow: hidden;
@@ -145,22 +145,22 @@
 
 /* Store Section */
 .store-section {
-  width: 100%;
+  width: 100vw;
   background-color: #F3F4F6;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px;
+  padding: 40px 3vw;
+  overflow: hidden;
+  position: relative;
 }
 
 .store-grid {
   display: grid;
   gap: 40px;
   width: 100%;
-  max-width: calc(4 * 425px + 3 * 40px);
   grid-template-columns: repeat(auto-fill, minmax(425px, 1fr));
   justify-content: center;
-  padding: 30px 0px;
 }
 
 .merch-block {
@@ -344,7 +344,7 @@
     order: 2;
     margin-left: 0;
     margin-top: 0;
-    bottom: 10px;
+    bottom: 20px;
     left: 3vw;
     align-self: flex-start;
     
@@ -374,16 +374,6 @@
     height: 3px;
     padding: 0;
     margin-top: 0;
-    background: linear-gradient(
-    to right,
-    #FF0000 0%,
-    #FFB300 24%,
-    #FFFF00 41%,
-    #00FF00 51.5%,
-    #00FFF7 63%,
-    #0000FF 74%,
-    #8E00FF 100%
-    );
   }
 
   .release-text p {
