--- a/home.css
+++ b/home.css
@@ -140,8 +140,12 @@
   width: 200px;
   height: auto;
   transition: width 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
+.pre-order:hover img{
+  transform: scale(1.1);
+}
 
 /* Store Section */
 .store-section {
@@ -171,6 +175,11 @@
   position: relative;
   border: clamp(4px, 0.5vw + 4px, 5px) solid #0B1215;
   font-size: 175%;
+  transition: transform 0.3s ease;
+}
+
+.merch-block:hover {
+  transform: scale(1.05);
 }
 
 .merch-block-image-container {
