--- a/store/store.css
+++ b/store/store.css
@@ -28,6 +28,8 @@
   transition: font-size 0.3s ease;
   padding: 0;
   margin-bottom: 40px;
+  text-align: left;
+  width: 100%;
 }
 
 .store-grid {
