responsive about page done

--- a/store/store.css
+++ b/store/store.css
@@ -108,17 +108,17 @@
 .merch-block-price-container {
   flex: 1;
   display: flex;
-  justify-content: center; /* Center horizontally */
-  align-items: center; /* Center vertically */
-  text-align: center; /* Ensure the text is centered */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .merch-block-price {
   font-family: "ringold-sans", sans-serif;
   font-weight: 400;
-  font-size: 1.5em; /* Scales with the parent merch block */
+  font-size: 1.5em;
   color: #0B1215;
-  margin: 0; /* No margin ensures perfect centering */
+  margin: 0;
   text-align: center;
 }
 
